# timewarrior-jirapush

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
src/: jira.rs  main.rs  timewarrior.rs
src/tests/: mod.rs  timewarrior.rs  tw.rs
