[package]
name = "timewarrior-jirapush"
version = "0.1.0"
authors = ["Mason Edgel <medgel@reliaquest.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"env_logger" = "0.8.3"
"futures" = "0.3.13"
"log" = "0.4.14"
"regex" = "1.4.5"
"reqwest" = "0.11.2"
"serde_json" = "1.0.64"
"serde" = { version = "1.0.125", features = ["derive"] }
"time" = { version = "0.2.26", features = ["serde"] }
"tokio" = { version = "1.4.0", features = ["full"] }
