[package]
name = "timewarrior_jirapush"
version = "0.1.0"
authors = ["Forest Ames <fox.ames@t7c.dev>"]
edition = "2018"
description = "TimeWarrior-JiraPush is a configurable TimeWarrior Extension that uploads timewarrior intervals to Jira as work logs."
readme = "README"
homepage = "https://gitlab.com/FoxAmes/timewarrior-jirapush"
repository = "https://gitlab.com/FoxAmes/timewarrior-jirapush"
license = "MIT"

[[bin]]
name = "jirapush"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
"env_logger" = "0.8.3"
"log" = "0.4.14"
"regex" = "1.4.5"
"reqwest" = { version = "0.11.2", features = ["blocking"] }
"semver" = "0.11.0"
"serde_json" = "1.0.64"
"serde" = { version = "1.0.125", features = ["derive"] }
"time" = { version = "0.2.26", features = ["serde"] }
